--- a/frontend/src/components/CrossQueries/CrossQueries.css
+++ b/frontend/src/components/CrossQueries/CrossQueries.css
@@ -19,8 +19,10 @@ select {
   width: 150px;
   margin-left: 10px;
   height: 29px;
-  box-shadow: 1px 2px 2px #cecece;
+  box-shadow: none;
+  /* box-shadow: 1px 2px 2px #cecece; */
   cursor: pointer;
+  border: 1px solid #3176b1;
 }
 
 .inputId {
