--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -27,11 +27,13 @@
 .buttonAllFilters {
   display: flex;
   border: 1px solid #3176b1;
-  padding: 12px;
+  padding: 7px;
   border-radius: 27px;
   margin-left: 6vw;
-  margin-top: -53px;
-  margin-bottom: 10px;
+  /* margin-top: -53px; */
+  /* margin-bottom: 10px; */
+  height: fit-content;
+  margin-top: 13%;
   align-items: center;
 }
 
@@ -109,9 +111,8 @@ p {
   height: fit-content;
   padding: 10px;
   font-size: 14 px;
-  border: 1px solid #c4c4c4;
-  box-shadow: chocolate;
-  box-shadow: 1px 1px 4px 0px #e9e9e9;
+  border-radius: 3px;
+  border: 1px solid #3176b1;
   text-overflow: clip;
   line-height: 1.8;
   max-width: 50vw;
@@ -120,13 +121,29 @@ p {
 .filterTermsContainer {
   margin-bottom: 13px;
   display: flex;
-  width: 95vw;
+  width: 76vw;
   justify-content: space-evenly;
   /* margin-bottom: 18px; */
   flex-wrap: wrap;
+  height: -moz-fit-content;
   height: fit-content;
+  border: 1px solid #3176b1;
   margin-left: -10px;
+  padding-top: 50px;
+  padding-left: 26px;
+  border-radius: 8px;
 }
+
+fieldset {
+  padding: 0px;
+  border: 1px solid #3176b1;
+}
+
+.filterTermsContainer legend {
+  color: #3176b1;
+  font-family: sans-serif;
+}
+
 .filterTermsContainer2 {
   display: none;
 }
@@ -246,7 +263,7 @@ ul {
   flex-direction: column;
   /* width: 330px; */
   /* max-width: 400px; */
-  max-height: 203px;
+  max-height: 220px;
   align-content: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -471,9 +488,8 @@ label {
     height: fit-content;
     padding: 10px;
     font-size: 14 px;
-    border: 1px solid #c4c4c4;
-    box-shadow: chocolate;
-    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    border: 1px solid #3176b1;
+    border-radius: 3px;
     text-overflow: clip;
     max-width: 30vw;
   }
@@ -493,11 +509,10 @@ label {
     height: fit-content;
     padding: 10px;
     font-size: 14 px;
-    border: 1px solid #c4c4c4;
-    box-shadow: chocolate;
-    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    border: 1px solid #3176b1;
     text-overflow: clip;
     max-width: 40vw;
+    border-radius: 3px;
   }
   .containerSelection {
     display: flex;
@@ -518,11 +533,10 @@ label {
     height: fit-content;
     padding: 10px;
     font-size: 14 px;
-    border: 1px solid #c4c4c4;
-    box-shadow: chocolate;
-    box-shadow: 1px 1px 4px 0px #e9e9e9;
+    border: 1px solid #3176b1;
     text-overflow: clip;
     max-width: 80vw;
+    border-radius: 3px;
   }
   .containerSelection {
     display: flex;
@@ -535,12 +549,18 @@ label {
   }
 
   .filterTermsContainer {
+    margin-bottom: 13px;
     display: flex;
-    width: 95vw;
+    width: 76vw;
     justify-content: space-evenly;
-    margin-bottom: 18px;
+    /* margin-bottom: 18px; */
     flex-wrap: wrap;
-    margin-left: 0px;
+    height: -moz-fit-content;
+    height: fit-content;
+    border: 1px solid #3176b1;
+    margin-left: -10px;
+    padding-top: 20px;
+    padding-left: 26px;
   }
 
   .selectModule1 {
