--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -17,7 +17,7 @@
   scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
 }
 
-.tdGranu ion-icon{
+.tdGranu ion-icon {
   width: 15px;
   color: black;
   margin: 0px;
@@ -25,8 +25,8 @@
   cursor: pointer;
 }
 
-.tdGranu ion-icon:hover{
-  font-weight:700;
+.tdGranu ion-icon:hover {
+  font-weight: 700;
   color: black;
 }
 
@@ -37,6 +37,9 @@
 
 thead {
   border-bottom: 0px !important;
+}
+.theadResults {
+  border: 1px solid #3176b1;
 }
 .menu-icon-container {
   display: flex;
@@ -112,20 +115,19 @@ li svg {
   padding-right: 2px;
 }
 
-.crossQButtonTable{
+.crossQButtonTable {
   text-decoration: underline;
   text-underline-offset: 2px;
-  color: #3176B1;
+  color: #3176b1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.crossQsymbol{
+.crossQsymbol {
   width: 14px;
   /* margin-left: 7px; */
   align-items: center;
-  margin-left: 82%;
 }
 
 /* Customize the scrollbar track */
@@ -168,7 +170,7 @@ li svg {
 .sticky-header,
 .visible {
   padding: 8px;
-  border: 1px solid #808cc9;
+  border: 1px solid #3176b1;
   text-align: left;
   white-space: break-spaces;
   width: 86vw;
@@ -179,6 +181,28 @@ li svg {
   justify-content: space-evenly;
   font-family: sans-serif;
 }
+
+.visible-id {
+  padding: 8px;
+  border: 1px solid #3176b1;
+  text-align: left;
+  white-space: break-spaces;
+  width: 86vw;
+  overflow-x: scroll;
+  flex-direction: row-reverse;
+  height: 60px;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  font-family: sans-serif;
+  align-items: center;
+}
+
+.tbodyResults {
+  border-left: 1px solid #3176b1;
+  border-right: 1px solid #3176b1;
+}
+
 .pagination-controls {
   display: flex;
   justify-content: center;
@@ -236,7 +260,6 @@ input[type='checkbox']:before {
   margin-bottom: 64px;
 }
 
-
 .theadGranularity {
   background-color: #f0f0f0;
 }
@@ -251,7 +274,8 @@ input[type='checkbox']:before {
   border-bottom: 1px solid #8fadc1;
 }
 .thGranularity,
-.tdGranu, .thGranularityTitle{
+.tdGranu,
+.thGranularityTitle {
   font-size: 14px;
   width: 33.33%;
   font-family: sans-serif;
@@ -264,20 +288,20 @@ input[type='checkbox']:before {
   justify-content: flex-start;
 }
 
-.tdNotFoundDataset{
+.tdNotFoundDataset {
   color: rgb(134, 145, 164);
 }
-.thGranularityTitle{
+.thGranularityTitle {
   color: white;
   font-weight: 700;
   font-size: 15px;
 }
 
-.tdFound{
+.tdFound {
   font-weight: 600;
 }
 
-.tdNotFound{
+.tdNotFound {
   color: rgb(134, 145, 164);
   font-weight: 600;
 }
@@ -304,6 +328,7 @@ th.sticky-header {
   z-index: 3;
   display: flex;
   align-items: center;
+  padding-bottom: 19px;
 }
 
 th {
