--- a/frontend/src/components/CrossQueries/CrossQueries.css
+++ b/frontend/src/components/CrossQueries/CrossQueries.css
@@ -3,11 +3,10 @@
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
-  margin-top: -37vh;
   /* margin-right: 30px; */
   align-content: center;
   align-items: flex-start;
-  border: 1px solid #c0cbd5;
+  border: 1px solid #3176b1;
   border-radius: 19px;
 }
 
@@ -126,11 +125,10 @@ h5:hover {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
-    margin-top: -30vh;
     /* margin-right: 30px; */
     align-content: center;
     align-items: flex-start;
-    border: 1px solid #c0cbd5;
+    border: 1px solid #3176b1;
     border-radius: 19px;
   }
 
