--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -70,6 +70,19 @@ thead {
   font-size: 11.5px;
 }
 
+.errorConnection {
+  color: rgb(185 79 79);
+  font-weight: bold;
+  width: -moz-fit-content;
+  width: fit-content;
+  /* width: 150%; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* font-size: 14px; */
+  margin-top: 46px !important;
+}
+
 .column-list li:hover {
   color: #5c5cb5;
 }
@@ -82,7 +95,7 @@ thead {
   font-size: 16px;
 }
 
-.noResultsFullResponse{
+.noResultsFullResponse {
   margin-top: 10px;
   color: rgb(198, 59, 12);
   font-family: sans-serif;
@@ -212,7 +225,7 @@ li svg {
 .pagination-controls {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 22px;
 }
 
 .pagination-controls button {
@@ -281,12 +294,12 @@ input[type='checkbox']:before {
 }
 .thGranularity,
 .tdGranu,
-.thGranularityTitle {
+.thGranularityTitle,
+.thGranularityTitleBeacon {
   font-size: 14px;
-  width: 33.33%;
+  width: 333px;
   font-family: sans-serif;
   /* padding: 8px; */
-  padding-left: 24px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -294,6 +307,17 @@ input[type='checkbox']:before {
   justify-content: flex-start;
 }
 
+.thGranularityTitle {
+  margin-left: -10px;
+}
+
+.thGranularityTitleBeacon {
+  padding-left: 10px;
+}
+
+.trGranuBeacon td {
+  padding-left: 11px;
+}
 .tdNotFoundDataset {
   color: rgb(134, 145, 164);
 }
@@ -522,6 +546,8 @@ h1 {
   justify-content: center;
   /* margin-right: 26px; */
   width: 100vw;
+  padding-bottom: 50px;
+
   align-content: center;
   flex-wrap: wrap;
   margin-left: 10px;
@@ -553,6 +579,7 @@ h1 {
     align-content: center;
     flex-wrap: wrap;
     margin-left: 10px;
+    padding-bottom: 50px;
     margin-right: 10px;
     margin-top: 24px;
     align-items: center;
