--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -24,22 +24,30 @@
   height: 20px;
 }
 
+.containerExamplesVariant{
+  margin-bottom: 4px;
+  /* display: flex; */
+  align-items: flex-start;
+  /* margin-left: 4px; */
+  width: 254px;
+  display: flex;
+  flex-direction: column;
+}
+
+
 .buttonAllFilters {
   display: flex;
   border: 1px solid #3176b1;
   padding: 7px;
   border-radius: 27px;
-  margin-left: 6vw;
+  /* margin-left: 6vw; */
   /* margin-top: -53px; */
   /* margin-bottom: 10px; */
-  height: fit-content;
-  margin-top: 13%;
-  align-items: center;
+  margin-top: 24px;
 }
 
 .buttonAllFilters:hover {
   border: 2.4px solid #4883b8;
-  margin-bottom: 8px;
 }
 
 .buttonAllFilters h4 {
@@ -103,6 +111,34 @@ p {
   min-width: 112px;
 }
 
+.tabs {
+  display: flex;
+}
+
+.tab {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: none;
+  background-color: #e0e9f7;
+  font-size: 13px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #3176b1;
+  font-weight: 600;
+}
+
+.tab.active {
+  background-color: rgb(255, 255, 255);
+  border-top: 1px solid #3176b1;
+  border-left: 1px solid #3176b1;
+  border-right: 1px solid #3176b1;
+}
+
+.tab-content {
+  padding: 10px;
+  border: 1px solid #3176b1;
+}
+
 .label-ontology-div label {
   margin-left: 0px;
 }
@@ -119,17 +155,16 @@ p {
 }
 
 .filterTermsContainer {
-  margin-bottom: 13px;
   display: flex;
-  width: 76vw;
+  width: 84vw;
   justify-content: space-evenly;
   /* margin-bottom: 18px; */
   flex-wrap: wrap;
   height: -moz-fit-content;
   height: fit-content;
-  border: 1px solid #3176b1;
+  border: none;
   margin-left: -10px;
-  padding-top: 50px;
+  padding-top: 30px;
   padding-left: 26px;
   border-radius: 8px;
 }
@@ -254,16 +289,14 @@ li {
 ul {
   padding-left: 0;
   /* column-width: 213px; */
-  column-count: 2;
   /* max-width: 3013px; */
   display: flex;
   list-style: none;
-  max-height: -3vh;
+  max-height: 250px;
   /* max-height: 238px; */
   flex-direction: column;
   /* width: 330px; */
   /* max-width: 400px; */
-  max-height: 220px;
   align-content: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -306,7 +339,7 @@ label {
 .divFilter {
   margin-right: 10px;
   margin-left: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 4px;
   width: -moz-fit-content;
   width: fit-content;
   min-width: 130px;
@@ -436,6 +469,7 @@ label {
 .formula {
   width: 20px;
   margin-right: 12.5px;
+  margin-left: 7px;
 }
 
 .dictionary {
@@ -549,7 +583,6 @@ label {
   }
 
   .filterTermsContainer {
-    margin-bottom: 13px;
     display: flex;
     width: 76vw;
     justify-content: space-evenly;
