--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -17,12 +17,13 @@
   scrollbar-color: rgb(188 208 223 / 50%) rgba(0, 0, 0, 0);
 }
 
-.tdGranu ion-icon {
+.tdGranuBeacon ion-icon {
   width: 15px;
   color: black;
   margin: 0px;
   margin-left: 11px;
   cursor: pointer;
+  margin-top: 2px;
 }
 
 .tdGranu ion-icon:hover {
@@ -101,8 +102,8 @@ thead {
   font-family: sans-serif;
 }
 
-li svg {
-  margin-left: 7px;
+.noResultsFullResponse:hover {
+  color: rgb(198, 59, 12);
 }
 .sticky-header input {
   border: 1px solid #e0eaf9;
@@ -201,6 +202,18 @@ li svg {
   font-family: sans-serif;
 }
 
+.tdGranuBeacon {
+  /* margin-left: 28px; */
+  font-size: 14px;
+  font-family: sans-serif;
+  /* padding: 8px; */
+  text-align: center;
+  display: flex;
+  align-items: center;
+  width: 328px;
+  align-content: center;
+  justify-content: flex-start;
+}
 .visible-id {
   padding: 8px;
   border: 1px solid #3176b1;
@@ -263,6 +276,13 @@ input[type='checkbox']:before {
   margin-right: 1px;
 }
 
+tr {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .divFilter p {
   color: #3176b1;
 }
@@ -279,8 +299,8 @@ input[type='checkbox']:before {
   margin-bottom: 64px;
 }
 
-.theadGranularity {
-  background-color: #f0f0f0;
+.tableGranularity {
+  width: fit-content;
 }
 
 .trGranu {
@@ -292,8 +312,23 @@ input[type='checkbox']:before {
   height: 55px;
   border-bottom: 1px solid #8fadc1;
 }
+
 .thGranularity,
 .tdGranu,
+.thGranularityTitle,
+.thGranularityTitleBeacon {
+  font-size: 14px;
+  width: 328px;
+  font-family: sans-serif;
+  /* padding: 8px; */
+  text-align: center;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+}
+
+.tdGranuNoResults,
 .thGranularityTitle,
 .thGranularityTitleBeacon {
   font-size: 14px;
@@ -307,16 +342,36 @@ input[type='checkbox']:before {
   justify-content: flex-start;
 }
 
-.thGranularityTitle {
-  margin-left: -10px;
+.tdGranuBeaconNoResults {
+  margin-left: 10px;
+  font-size: 14px;
+  font-family: sans-serif;
+  /* padding: 8px; */
+  text-align: center;
+  display: flex;
+  align-items: center;
+  width: 302px;
+  align-content: center;
+  justify-content: flex-start;
+}
+.thGranularityTitleBeacon {
+  color: white;
+  margin-left: 10px;
 }
 
 .thGranularityTitleBeacon {
   padding-left: 10px;
 }
 
+.trGranu td {
+  padding-left: 12px;
+
+  max-width: 100%;
+  overflow-y: overlay;
+}
+
 .trGranuBeacon td {
-  padding-left: 11px;
+  padding-left: 12px;
 }
 .tdNotFoundDataset {
   color: rgb(134, 145, 164);
@@ -569,7 +624,20 @@ h1 {
   justify-content: center;
 }
 
+.tdGranu .tdFound {
+  margin-left: 0px;
+}
+
 @media (max-width: 1000px) {
+  .tdGranu .tdFound {
+    margin-left: 10px;
+  }
+  tr {
+    display: flex;
+    width: 90vw;
+    align-items: center;
+    justify-content: flex-start;
+  }
   .containerBeaconResults {
     display: flex;
     flex-direction: column;
@@ -655,6 +723,15 @@ h1 {
     font-weight: bold;
     /* margin-top: 8px; */
     margin-bottom: 2px;
+  }
+}
+
+@media (max-width: 800px) {
+  .tdGranuBeacon {
+    font-size: 12px;
+  }
+  .tdGranu {
+    font-size: 12px;
   }
 }
 
